--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,10 @@ body{
   
 }
 
+#root{
+  height: 100%;
+}
+
 .grid-container{
   display: grid;
   grid-template-areas: 
@@ -51,6 +55,14 @@ a.brand{
   font-weight: bold;
 }
 
+h1{
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+h2{
+  font-size: 1.6rem;
+  padding: 1rem 0;
+}
 
 .row{
   display: flex;
@@ -61,4 +73,83 @@ a.brand{
 
 .row .center{
   justify-content: center;
+}
+
+.row .top{
+  justify-content: flex-start;
+}
+.col-1{
+  flex: 1 1 25rem;
+} 
+.col-2{
+  flex: 2 1 50rem;
+}
+
+ul{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+li{
+  margin-top: 1rem;
+}
+button {
+  padding: 1rem;
+  border: 0.1rem #a4a4a4 solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1.6rem;
+  font-family: sans-serif;
+  background-color: #f8f8f8;
+}
+button:hover {
+  border: 0.1rem #404040 solid;
+}
+button.primary {
+  background-color: #f0c040;
+}
+button .block{
+  width: 100%;
+}
+button.secondary {
+  background-color: #f0f0f0;
+}
+img{
+  border-radius: 0.5rem;
+}
+img.medium{
+  max-width: 29rem;
+  width: 100%;
+}
+img .large{
+  width: 100%;
+}
+.card{
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  border-radius: 05rem;
+  margin: 1rem;
+}
+
+.card-body{
+  padding: 1rem;
+}
+.card-body >*{
+  margin-bottom: 0.5rem;
+}
+
+.price{
+  font-size: 2rem;
+}
+
+.rating span{
+  color: #f0c040;
+  margin: 0.1rem;
+}
+
+.success{
+  color: green;
+}
+.error{
+  color: red;
 }
